[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for poker app"
authors = ["quanganh <qa872001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
pydantic = "^2.0.0"
pokerkit = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

